Finalización de la página de inicio
Finalización de la página de inicio, he modificado algunos detalles de la página y no está implementada la información dinámica en los carruseles

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -97,7 +97,7 @@
       </div>
     </nav>
     <main>
-      <div class="container text-center s-1">
+      <div class="s-1 container text-center">
         <div class="row">
           <div class="col">
             <div class="container d-flex flex-column meso-info-container">
@@ -121,9 +121,344 @@
           <div class="col title-img"> <img class="front-img" src="/Assets/Images/portada-meso-1.png"> </div>
         </div>
       </div>
+      <div class="s-2 container">
+        <div class="form-container d-flex flex-column">
+          <form class="mx-6">
+            <div class="d-flex align-items-start form-title">
+              <h1>¡Solicita Información!</h1>
+            </div>
+            <div class="d-flex flex-row">
+              <div class="col">
+                <input type="text" placeholder="Nombre" required>
+              </div>
+              <div class="col">
+                <input type="email" placeholder="Correo Electrónico" required>
+              </div>
+            </div>
+            <div class="text-area-container form-textarea">
+              <textarea rows="7" placeholder="¿Qué carrera te interesa?" required></textarea>
+            </div>
+            <div class="d-flex justify-content-end align-items-end">
+              <button class="btn-meso">Enviar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="s-3 container-fluid d-flex flex-column text-center">
+        <div class="container s3-title-container">
+          <a href="#" class="s3-title"><h1>CONOCE NUESTRO CAMPUS</h1></a>
+        </div>
+        <div class="container">
+          <ul class="s3-links d-flex flex-column">
+            <li><a href="#">Galería</a></li>
+            <li><a href="#">Tour Virtual <b>360º</b></a></li>
+            <li><a href="#">Videos</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="s-4 text-center p-0">
+        <div class="container">
+          <div class="title-1"><h1><strong>¿Qué es Universidad Mesoamericana?</strong></h1></div>
+          <div class="row meso-info">
+            <div class="col">
+              <img src="/Assets/Images/Inicio-icons/book-1-480x480.png">
+              <p class="title"><strong>Formación centrada en el Estudiante</strong></p>
+              <p class="sub-title">Contribuimos al desarrollo de la dignidad humana, del patrimonio cultural nacional y universal mediante la enseñanza y la investigación.</p>
+            </div>
+            <div class="col">
+              <img src="/Assets/Images/Inicio-icons/woman-480x480.png">
+              <p class="title"><strong>Formación con compromiso y ética</strong></p>
+              <p class="sub-title">Formamos personas comprometidas con el país y capaces de asumir un compromiso ético.</p>
+            </div>
+            <div class="col">
+              <img src="/Assets/Images/Inicio-icons/support-480x480.png">
+              <p class="title"><strong>Profesionales Competentes</strong></p>
+              <p class="sub-title">Procuramos orientar su acción hacia sectores populares y de bajos ingresos de modo prioritario, con el fin de formarlos como profesionales competentes y capaces de insertarse en el mercado laboral.</p>
+            </div>
+            <div class="col">
+              <img src="/Assets/Images/Inicio-icons/team-management-480x480.png">
+              <p class="title"><strong>Enseñanza con Calidad</strong></p>
+              <p class="sub-title">Desarrollamos carreras en el campo humanístico, de ciencias sociales y tecnológicas; procurando una enseñanza con calidad y una investigación pertinente, científica y social.</p>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="title-2"><h1><strong>Reglamentos y Estatutos</strong></h1></div>
+          <div class="row meso-regulations">
+            <div class="col">
+              <h3>REGLAMENTO GENERAL</h3>
+              <a href="/Assets/Docs/REGLAMENTOS.pdf" download><img src="/Assets/Images/Reglamento-General.png"></a>
+            </div>
+            <div class="col">
+              <h3> ESTATUTOS</h3>
+              <a href="/Assets/Docs/Estatutos.pdf" download><img src="/Assets/Images/Estatutos.png"></a>
+            </div>
+            <div class="col">
+              <h3> REGLAMENTO ACADÉMICO</h3>
+              <a href="https://issuu.com/mesoamericana/docs/reglamento_acad_mico_2019" target="_blank"><img src="/Assets/Images/Reglamento-Academico.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="s-5 container-fluid text-center">
+        <div class="title">
+           <h2>REVISTA EXPLORA</h2>
+        </div>
+        <div class="content-text">
+          <p>Este es un espacio para la divulgación de investigaciones científicas, ensayos y artículos de nuestros docentes promovido por el Señor Rector Dr. Félix Javier Serrano Ursúa. Y deseamos sea pionero en el campo de las publicaciones académicas de nuestro querido departamento.</p>
+        </div>
+        <div id="exploraCarousel" class="carousel slide" data-bs-ride="true">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#exploraCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#exploraCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <div class="col">
+                  <div class="container"><p>Revista Explora - 5ta. Edición</p></div>
+                  <a href="#"><img src="/Assets/Images/EXPLORAMESO-5taEdicion-1.png" class="d-block"></a>
+                </div>
+                <div class="col">
+                  <div class="container"><p>Revista Explora - 4ta. Edición</p></div>
+                  <a href="#"><img src="/Assets/Images/Portada-Meso-4.png" class="d-block" ></a>
+                </div>
+                <div class="col">
+                  <div class="container"><p>Revista Explora - 3ra. Edición</p></div>
+                  <a href="#"><img src="/Assets/Images/Explora-Revista.png" class="d-block"></a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col"></div>
+                <div class="col">
+                  <div class="container"><p>Revista Explora - 2da. Edición</p></div>
+                  <a href="#"><img src="/Assets/Images/PORTADA-MESO.jpg" class="d-block"></a>
+                </div>
+                <div class="col"></div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#exploraCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#exploraCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <div class="s-6 container-fluid text-center">
+        <div class="container-fluid more-info">
+          <div class="row mx-auto align-items-center">
+            <div class="col d-flex flex-column">
+              <div class="container">
+                <h1><strong>MANTENTE INFORMADO</strong></h1>
+              </div>
+              <div class="container">
+                <h5>Sigue las noticias de las actividades e información de Universidad Mesoamericana.</h5>
+              </div>
+              <div class="container">
+                <a href="#" class="btn-meso">Click Aquí</a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="info-carousel">
+                <div id="moreInfoCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="8" aria-label="Slide 9"></button>
+                    <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="9" aria-label="Slide 10"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active info-carousel-img-1">
+                      <div class="info-carousel-img-1"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-2">
+                      <div class="info-carousel-img-2"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-3">
+                      <div class="info-carousel-img-3"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-4">
+                      <div class="info-carousel-img-4"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-5">
+                      <div class="info-carousel-img-5"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-6">
+                      <div class="info-carousel-img-6"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-7">
+                      <div class="info-carousel-img-7"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-8">
+                      <div class="info-carousel-img-8"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-9">
+                      <div class="info-carousel-img-9"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-10">
+                      <div class="info-carousel-img-10"></div>
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#moreInfoCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#moreInfoCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid employment-exchange">
+          <div class="row mx-auto align-items-center">
+            <div class="col">
+              <div class="info-carousel">
+                <div id="employment-exchangeCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="8" aria-label="Slide 9"></button>
+                    <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="9" aria-label="Slide 10"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active info-carousel-img-1">
+                      <div class="info-carousel-img-1"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-2">
+                      <div class="info-carousel-img-2"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-3">
+                      <div class="info-carousel-img-3"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-4">
+                      <div class="info-carousel-img-4"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-5">
+                      <div class="info-carousel-img-5"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-6">
+                      <div class="info-carousel-img-6"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-7">
+                      <div class="info-carousel-img-7"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-8">
+                      <div class="info-carousel-img-8"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-9">
+                      <div class="info-carousel-img-9"></div>
+                    </div>
+                    <div class="carousel-item info-carousel-img-10">
+                      <div class="info-carousel-img-10"></div>
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col d-flex flex-column">
+              <div class="container">
+                <h1><strong>BOLSA DE EMPLEO</strong></h1>
+              </div>
+              <div class="container">
+                <h5>Vacantes disponibles para profesionales a los cuales puedes aplicar.</h5>
+              </div>
+              <div class="container">
+                <h5>Más información:</h5>
+              </div>
+              <div class="container">
+                <a href="#" class="btn-meso-white">Click Aquí</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="s-7 container-fluid text-center">
+        <div class="row justify-content-center align-items-center mx-auto">
+          <div class="col">
+            <div class="d-flex flex-column">
+              <div class="title">
+                <h2>¡Síguenos en nuestras Redes Sociales!</h2>
+              </div>
+              <div class="content">
+                <p>Podrás solicitar más información y enterarte de las actividades que realizamos en Universidad Mesoamericana.</p>
+              </div>
+              <div class="extra-content">
+                <p>¡Te esperamos!</p>
+              </div>
+              <div class="social-networks d-flex justify-content-center align-items-center">
+                <div><a href="https://www.facebook.com/mesoxela" target="_blank"><i class="bi bi-facebook"></i></a></div>
+                <div><a href="https://www.instagram.com/mesoxela/" target="_blank"><i class="bi bi-instagram"></i></a></div>
+                <div><a href="https://twitter.com/mesoxela" target="_blank"><i class="bi bi-twitter"></i></a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="img-container">
+              <img src="/Assets/Images/Social-networks-girl.png">
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer>
-
+    <footer class="container-fluid text-center">
+      <div class="row">
+        <div class="col">
+          <p class="title">CAMPUS ZONA 3</p>
+          <div class="content">
+            <p>3a calle 14-36 zona 3</p>
+            <p>PBX 7932 9000</p>
+            <p>info@mesoamericana.edu.gt</p>
+          </div>
+        </div>
+        <div class="col">
+          <p class="title">CAMPUS LAS AMÉRICAS</p>
+          <div class="content">
+            <p>Facultad de Medicina – Tel. 7728  8400</p>
+            <p>Extensión 107 o 108</p>
+            <p>10a calle 0-11 zona 9</p>
+          </div>
+        </div>
+        <div class="col">
+          <p class="title">CAMPUS LAS AMÉRICAS</p>
+          <div class="content">
+            <p>Facultad de Ingeniería – PBX 7728 8400</p>
+            <p>Extensión 115</p>
+            <p>Avenida Las Américas 9-80 zona 9</p>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid text-center all-rights">
+        <strong>© 2020 Universidad Mesoamericana</strong>
+      </div>
     </footer>
   </body>
   <script src="/JS/index.js"></script>
