Finalización de las páginas de noticias y de calendarios
Finalización de las páginas de noticas y de calendarios 2022 junto con sus links de descarga y cambios menores a los estilos

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,8 +18,8 @@
       <div class="items-container container-fluid w-100 justify-content-center">
         <div class="container">
           <ul class="d-flex justify-content-center">
-            <li><div class="container"><a href="#">Inicio</a></div></li>
-            <li><div class="container"><a href="#">Noticias</a></div></li>
+            <li><div class="container"><a href="/HTML/index.html">Inicio</a></div></li>
+            <li><div class="container"><a href="/HTML/Noticias.html">Noticias</a></div></li>
             <li>
               <div class="dropdown">
                 <a class="drop-down-toggle" data-toggle="dropdown">Organización<i class="bi bi-caret-down-fill"></i></a>
@@ -48,7 +48,7 @@
                   <li><a class="dropdown-item" href="#">Carreras</a></li>
                   <li><a class="dropdown-item" href="#">Requisitos de admisión</a></li>
                   <li><a class="dropdown-item" href="#">Horario de clases</a></li>
-                  <li><a class="dropdown-item" href="#">Calendario Académico 2022</a></li>
+                  <li><a class="dropdown-item" href="/HTML/CalendarioAcademico.html">Calendario Académico 2022</a></li>
                   <li><a class="dropdown-item" href="#">Pasos de Inscripción</a></li>
                   <li><a class="dropdown-item" href="#">Registro Académico</a></li>
                   <li><a class="dropdown-item" href="#">Revista Explora</a></li>
